libs/bng/test/negative/N0304_compartment_in_molecule_types.bngl
# FAIL
# OUTPUT: error: syntax error, unexpected '@'


begin compartments
   B 3 1 
end compartments

begin molecule types
   A@B
end molecule types
